// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> snapshots renders anchor list correctly 1`] = `
<div
  class=""
  data-testid="list"
>
  <a
    class=""
    href="#"
  >
    Item 1
  </a>
  <a
    class=""
    href="#"
  >
    Item 2
  </a>
</div>
`;

exports[`<List /> snapshots renders button list correctly 1`] = `
<div
  class=""
  data-testid="list"
>
  <button
    class=""
  >
    Item 1
  </button>
  <button
    class=""
  >
    Item 2
  </button>
</div>
`;

exports[`<List /> snapshots renders ul list correctly 1`] = `
<div
  class=""
  data-testid="list"
>
  <button
    class=""
  >
    Item 1
  </button>
  <button
    class=""
  >
    Item 2
  </button>
</div>
`;
